# eccodes

./: .appveyor.yml  .clang-format  .cproject  .gitignore  .pre-commit-config.yaml  .project  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  NEWS  NOTICE  README  README.md  VERSION  VERSION.cmake  acinclude.m4  autogen.sh  configure.ac  ctest3.out  ecbuild_md5.patch  eccodes-import.cmake.in  eccodes.sublime-project  eccodes_config.h.in  grib_api-import.cmake.in  grib_api.spec.in  grib_api_config.h.in  grib_run_length_packing.cc  license.pl  make_dist_definitions  memfs.py  project_summary.cmake  show_class_hierarchies.py  show_compile.sh  test_2.npz  test_run_length_grib.py  test_run_length_grib_2.py  units.py  (+1 more)
data/: 60_model_levels  BUFR3.tmpl.dump.plain.ref  CMakeLists.txt  Makefile.am  bitmap.diff  download.sh  filesize_db.txt  filter_rules  grib_data_files.txt  ieee_test.good  index.ok  index_f90.ok  julian.out.good  list_points  mf.rules  multi.ok  multi_step.txt  no_bitmap.diff  perf.ksh  read_any.ok  ret.sh  sample_grib.txt  scan_x_regular_ll_5_4_good.dump  scan_x_regular_ll_5_7_good.dump  scan_x_regular_ll_8_4_good.dump  scan_x_regular_ll_8_7_good.dump  scan_x_rotated_ll_5_4_good.dump  scan_x_rotated_ll_5_7_good.dump  scan_x_rotated_ll_8_4_good.dump  scan_x_rotated_ll_8_7_good.dump  scan_y_regular_ll_5_4_good.dump  scan_y_regular_ll_5_7_good.dump  scan_y_regular_ll_8_4_good.dump  scan_y_regular_ll_8_7_good.dump  scan_y_rotated_ll_5_4_good.dump  scan_y_rotated_ll_5_7_good.dump  scan_y_rotated_ll_8_4_good.dump  scan_y_rotated_ll_8_7_good.dump  spherical_model_level.grib1.good  spherical_model_level.grib1_32.good  (+5 more)
definitions/: CMakeLists.txt  Makefile.am  add_params_from_tsv.pl  aerosols.csv  boot.def  boot_extra.def  check_grib_defs.pl  chemSpecies.csv  compare_concepts.pl  createGRIB2inputProcessIdentifiersConceptsFromYaml.py  create_chemdefs.py  create_def.pl  create_defs.grib.sh  create_defs.grib1.pl  create_defs.grib2.chemsplit.pl  create_defs.grib2.lte33.pl  create_defs.grib2.mtg2.pl  create_grib2_codetables.pl  create_legacy_def.sh  create_legacy_ecmf_defs.sh  create_legacy_wmo_defs.sh  create_mars_struct.pl  create_tables.pl  csv_2_tsv.pl  empty_template.def  extrules.am  inject_download_page.pl  installDefinitions.sh  make_makefile_am.pl  mars_param.table  marsattrib_db2def.pl  param_id.table  param_limits.def  parameters_version.def  parse_C14.py  publish_new_parameters.sh  section.2.def  x.grib
fortran/: CMakeLists.txt  Makefile.am  create_grib_f90.sh  eccodes.mod  eccodes_constants.h  eccodes_f77.h  eccodes_f90_head.f90  eccodes_f90_int.f90  eccodes_f90_int_size_t.f90  eccodes_f90_long_int.f90  eccodes_f90_long_size_t.f90  eccodes_f90_tail.f90  eccodes_settings.h.in  eccodes_visibility.h  extrules.am  grib_api_constants.h  grib_api_externals.h  grib_api_f77.h  grib_api_visibility.h  grib_f77.c  grib_f90.f90.head  grib_f90.f90.tail  grib_f90_head.f90  grib_f90_int.f90  grib_f90_int_size_t.f90  grib_f90_long_int.f90  grib_f90_long_size_t.f90  grib_f90_tail.f90  grib_fortran.c  grib_fortran.cc  grib_fortran_kinds.c  grib_fortran_prototypes.h  grib_typeSizes.f90  grib_types.f90  same_int_long.f90  same_int_size_t.f90
ifs_samples/: CMakeLists.txt  make_makefile_am.pl
perl/: Makefile.am  README
python/: CMakeLists.txt  Makefile.am  README  compare_iterator_values.sh  create_errors.py.sh  eccode.i  eccode.py  eccode_swig.i  eccodes.py  extrules.am  grib_errors.h  grib_interface.c  grib_interface.h  gribapi.c  gribapi.py  gribapi_swig.i  gribapi_swig.py  numpy.i  setup.py.autotools.in  setup.py.in  swig_wrap_array.c  swig_wrap_array.py  swig_wrap_numpy.c  swig_wrap_numpy.py  test_extra.py  test_general.py  test_index.py  test_iterator.py  test_keysiterator.py
samples/: CMakeLists.txt  GRIB2.tmpl  Makefile.am  ccsds_grib2.tmpl  destine_grib2.tmpl  diag.tmpl  gg_sfc_grib2.tmpl  hydro_grib2.tmpl  lambert_bf_grib2.tmpl  polar_stereographic_pl_grib2.tmpl  polar_stereographic_sfc_grib2.tmpl  reduced_gg_ml_grib1.tmpl  reduced_gg_ml_grib2.tmpl  reduced_gg_pl_1024_grib1.tmpl  reduced_gg_pl_1024_grib2.tmpl  reduced_gg_pl_1280_grib1.tmpl  reduced_gg_pl_1280_grib2.tmpl  reduced_gg_pl_128_grib1.tmpl  reduced_gg_pl_128_grib2.tmpl  reduced_gg_pl_160_grib1.tmpl  reduced_gg_pl_160_grib2.tmpl  reduced_gg_pl_2000_grib1.tmpl  reduced_gg_pl_2000_grib2.tmpl  reduced_gg_pl_200_grib1.tmpl  reduced_gg_pl_200_grib2.tmpl  reduced_gg_pl_256_grib1.tmpl  reduced_gg_pl_256_grib2.tmpl  reduced_gg_pl_320_grib1.tmpl  reduced_gg_pl_320_grib2.tmpl  reduced_gg_pl_400_grib1.tmpl  reduced_gg_pl_400_grib2.tmpl  reduced_gg_pl_48_grib1.tmpl  reduced_gg_pl_48_grib2.tmpl  reduced_gg_pl_512_grib1.tmpl  reduced_gg_pl_512_grib2.tmpl  reduced_gg_pl_640_grib1.tmpl  reduced_gg_pl_640_grib2.tmpl  reduced_gg_pl_64_grib1.tmpl  reduced_gg_pl_64_grib2.tmpl  reduced_gg_pl_80_grib1.tmpl  (+61 more)
src/: AccessorDefs.h  AccessorFactory.cc  AccessorFactory.h  CMakeLists.txt  ChangesB5.txt  ChangesB6.txt  ChangesB7.txt  Makefile.am  NumericLimits.h  TODO  accessor_class_hierarchy.txt  accessor_class_list.gperf  action.c  action.cc  action_class_alias.c  action_class_alias.cc  action_class_assert.c  action_class_assert.cc  action_class_close.c  action_class_close.cc  action_class_concept.c  action_class_concept.cc  action_class_gen.c  action_class_gen.cc  action_class_hash_array.c  action_class_hash_array.cc  action_class_hierarchy.txt  action_class_if.c  action_class_if.cc  action_class_list.c  action_class_list.cc  action_class_list.cpp  action_class_meta.c  action_class_meta.cc  action_class_modify.c  action_class_modify.cc  action_class_noop.c  action_class_noop.cc  action_class_print.c  action_class_print.cc  (+925 more)
templates/: Makefile.am  make_ifs_templates.sh  reduced_gg_pl_grib2.tmpl  regular_gg_ml_grib2.tmpl  regular_ll_sfc_grib2.tmpl  sh_pl_grib2.tmpl
tests/: CMakeLists.txt  Makefile.am  asca_139.t1.ref  badgrib.sh  big2gribex.sh  bitmap.sh  bits.c  bits.cc  bitsPerValue.sh  bpv_limit.c  bpv_limit.sh  budg.sh  bufr_change_edition.sh  bufr_check_descriptors.c  bufr_check_descriptors.cc  bufr_compare.sh  (+693 more)
(+8809 files in other folders)
